--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
                     <a class="nav-link text-primary" href="#">Inventory </a>
                 </li>
